# music-objects

./: Cargo.toml  README.md
src/: composition.rs  harmony.rs  interval.rs  lib.rs  note.rs  pitch.rs  rhythm.rs
