[package]
name = "music-objects"
version = "0.1.0"
edition = "2021"
description = "A library that provides a comprehensive set of musical objects for western music."
license = "MIT"
repository = "https://github.com/mrf7777/music-objects"
keywords = ["music", "western-music"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
version-sync = "0.9"